force-app/main/default/objects/Flight_Price_Notification__c/Flight_Price_Notification__c.object-meta.xml
<CustomObject>
    <label>Flight Price Notification</label>
    <nameField>
        <displayFormat>FPN-{0000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Price Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>