force-app/main/default/objects/Flight_Price_Notification__c/fields/Flight_Details__c.field-meta.xml
<CustomField>
    <fullName>Flight_Details__c</fullName>
    <label>Flight Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>