force-app/main/default/objects/Flight_Price_Notification__c/fields/Flight_Price_Alert__c.field-meta.xml
<CustomField>
    <fullName>Flight_Price_Alert__c</fullName>
    <label>Flight Price Alert</label>
    <referenceTo>Flight_Price_Alert__c</referenceTo>
    <relationshipLabel>Flight Price Notifications</relationshipLabel>
    <relationshipName>Flight_Price_Notifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>