force-app/main/default/objects/Flight_Price_Notification__c/fields/Found_Date__c.field-meta.xml
<CustomField>
    <fullName>Found_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Found Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>